# SolanaContract

./: Cargo.toml  DOC.md  README.md
client/: Cargo.toml
program/: Cargo.toml
program/src/: lib.rs  processor.rs
program/tests/: functional.rs
