[package]
name = "multisend"
version = "1.0.0"
description = "Multisend"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
solana-program = "1.16.5"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
borsh = "0.10.3"


[dev-dependencies]
solana-program-test = "1.16.5"
solana-sdk = "1.16.5"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]